--- a/portfolio.html
+++ b/portfolio.html
@@ -15,5 +15,14 @@
                 <li><a href="resume.html">Resume</a></li>
             </ul> 
             <h1>Anthony Nguyen's Website</h1>
+               <h2>Pew Pew Space Edition</h2> 
+               <a href="https://scratch.mit.edu/projects/260894940/"><img src="game.PNG"></a>
+            <p>
+                Pew pew space edition is a game where you become one with a spaceship defending 
+                <br>
+                your life against a range of monsters. You have to survive as long as you can 
+                <br>
+                and kill all the enemies that are in your way.
+            </p>
         </body>
 </html>
