--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,20 @@
                 your life against a range of monsters. You have to survive as long as you can 
                 <br>
                 and kill all the enemies that are in your way.
+                <hr>
+                The scoring system that was in the game was the ammount to points you would gain by killing your enemies.
+                <br>
+                The randomness that was in the game is how the enemies would fall down the screen randomly.
+                <br>
+                The game gets harder over time due to bosses start spawning and the enemies spawn faster.
+                <br> 
+                This game is like a survival game; where people have to survire and keep killing. But there you can lose due to your three life points.
+                <hr>
+                <h2>Reflection</h1>
+                <br>
+                I made this game because my friend said that it was a fun and enjoyable game. 
+                <br>
+                Two 
             </p>
         </body>
 </html>
